# DiffRoute

./: .gitignore  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: gh-pages.yml
api/: index.html
code_structure/: index.html
concepts/data_structures/: index.html
concepts/io/: index.html
concepts/multi_stage/: index.html
concepts/single_stage/: index.html
diffroute/: __init__.py  block_sparse_tensor.py  cat_interp.py  io.py  irf_utils.py  irfs.py  router.py  router_v1.py  schedule.py  staged_router.py  utils.py
diffroute/agg/: __init__.py  closure.py  index_precompute.py  index_precompute_v1.py  kernel_aggregator.py  kernel_aggregator_v1.py  kernel_sampler.py  prefix.py  scatter_reduce.py  temporal_sampler.py  transitive_closure.py
diffroute/conv/: __init__.py  block_sparse_conv.py  torch_function.py  triton_kernels.py
diffroute/graph_utils/: __init__.py  basic_clustering.py  block_size_aware_clustering.py
diffroute/ops/: __init__.py  closure_sub.py  in_place.py  scatter_reduce_triton.py  transitive_closure.py
diffroute/structs/: __init__.py  _tests.py  kernels.py  riv_graphs.py  utils.py
docs/: api.md  code_structure.md  index.md  quickstart.md
docs/concepts/: data_structures.md  io.md  multi_stage.md  single_stage.md
docs/examples/: custom_irf.md  index.md  rapid.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
examples/custom_irf/: index.html
quickstart/: index.html
search/: search_index.json
tests/: gen_data.py  sequential_models.py  test_helpers.py  tests.py
(+4 files in other folders)
