[project]
name = "diffroute"
version = "0.1.0"
description = "Differentiable river routing in PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"  
authors = [
    {name = "Tristan Hascoet", email = "tristan.hascoet@gmail.com"}
]
dependencies = [
    "torch>=2.0.0",
    "networkx",
    "pandas",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/TristHas/DiffRoute"
Repository = "https://github.com/TristHas/DiffRoute"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["diffroute"]
